Fixes - Add custom scrollbar to the list of  channels (Right side of chat app) - Handle image loading in autoScroll to last message

--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -294,6 +294,11 @@ p {
     z-index: 2;
 }
 
+#channels-list {
+    overflow-y: scroll;
+    height: calc(100vh - 88px);
+}
+
 #channels-list .badged-circle.group-picture img:first-child {
     width: 32px;
     height: 32px;
